<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.espertech</groupId>
		<artifactId>esper-parent</artifactId>
		<version>9.0.0</version>
	</parent>
	<properties>
		<rootPath>${project.parent.basedir}</rootPath>
	</properties>
	<name>Esper Regression-Run</name>
	<artifactId>esper-regression-run</artifactId>
	<packaging>jar</packaging>
	<inceptionYear>2005</inceptionYear>
	<url>http://www.espertech.com/esper</url>
	<licenses>
		<license>
			<name>GNU General Public License Version 2</name>
			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>espertech</id>
			<name>EsperTech</name>
			<email>info@espertech.com</email>
			<url>http://www.espertech.com</url>
			<organization>EsperTech</organization>
			<organizationUrl>http://www.espertech.com</organizationUrl>
		</developer>
	</developers>
	<dependencies>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-common</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-common-avro</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-common-xmlxsd</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-compiler</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-runtime</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-regression-lib</artifactId>
			<version>${project.version}</version>
		</dependency>

		<!-- Testing dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql-connector-java.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjdk.nashorn</groupId>
			<artifactId>nashorn-core</artifactId>
			<version>${nashorn.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>${slf4j-api.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.reload4j</groupId>
			<artifactId>reload4j</artifactId>
			<version>${reload4j.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<!-- <showDeprecation>true</showDeprecation> -->
					<skip>false</skip>
					<useIncrementalCompilation>false</useIncrementalCompilation>
					<compilerArgument>-XDignore.symbol.file</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
				<configuration>
					<skip>false</skip>
					<argLine>-Xms512m -Xmx512m</argLine>
					<includes>
						<include>**/Test*.java</include>
					</includes>
					<excludes>
						<exclude>**/TestManual*.java</exclude>
						<exclude>**/Test*$*</exclude>
					</excludes>
					<systemProperties>
						<property>
							<name>log4j.configuration</name>
							<value>log4j.xml</value>
						</property>
					</systemProperties>
					<additionalClasspathElements>
						<additionalClasspathElement>${basedir}/etc</additionalClasspathElement>
					</additionalClasspathElements>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven.deploy.plugin.version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven.dependency.plugin.version}</version>
				<configuration>
					<outputDirectory>lib</outputDirectory>
					<artifactItems>
						<artifactItem>
							<groupId>org.openjdk.nashorn</groupId>
							<artifactId>nashorn-core</artifactId>
							<version>${nashorn.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm-commons</artifactId>
							<version>${nashorn.asm.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm-tree</artifactId>
							<version>${nashorn.asm.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm</artifactId>
							<version>${nashorn.asm.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm-util</artifactId>
							<version>${nashorn.asm.version}</version>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>								
		</plugins>
	</build>
</project>
